Game development projects description and images

--- a/styles.css
+++ b/styles.css
@@ -239,8 +239,8 @@ section {
 
 .project__img {
   justify-self: center;
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   object-fit: cover;
 }
 
@@ -325,5 +325,8 @@ section {
     display: flex;
     flex-direction: column;
     padding: 2em;
+  }
+  .project__item--full-center {
+    width: 100%;
   }
 }
