--- a/animations.css
+++ b/animations.css
@@ -51,3 +51,18 @@
 .slide-in-bottom.animate-visible {
   animation: 1s ease-out 0s 1 slideInFromBottom;
 }
+
+/* Small screen media queries */
+@media only screen and (max-width: 800px) {
+  .slide-in-right.animate-visible {
+    animation: 1s ease-out 0s 1 slideInFromRight;
+  }
+
+  .slide-in-top.animate-visible {
+    animation: 1s ease-out 0s 1 slideInFromRight;
+  }
+
+  .slide-in-bottom.animate-visible {
+    animation: 1s ease-out 0s 1 slideInFromRight;
+  }
+}
